@@ -1,3 +1,7 @@
+1999-10-18  Gary Houston  <ghouston@freewire.co.uk>
+
+	* tests/ports.test: add seek/tell tests for unidirectional ports.
+
 1999-09-25  Jim Blandy  <jimb@savonarola.red-bean.com>
 
 	* tests/reader.test: Check that number->string checks its radix
